--- a/.github/workflows/reproduce-and-sweep.yml
+++ b/.github/workflows/reproduce-and-sweep.yml
@@ -4,232 +4,96 @@ on:
   workflow_dispatch:
     inputs:
       n_obs:   { description: "number of observations", default: "40" }
-      grid:    { description: "grid size",               default: "80" }
-      noise:   { description: "observation noise",       default: "0.1" }
-      vx:      { description: "flow vx",                 default: "1.0" }
-      vy:      { description: "flow vy",                 default: "0.3" }
-      seed:    { description: "random seed",             default: "7" }
-      # 把所有 sweep 相关放进一个输入里，分号分隔键，逗号分隔值
-      # 例：lp=20,30,40;lc=6,8,12;alpha=1e-6,1e-5;trend=true,false;os=ubuntu;max=24
-      matrix:
-        description: "sweep spec: lp=..;lc=..;alpha=..;trend=..;os=ubuntu|windows;max=N"
-        default: "lp=20,30,40;lc=6,8,12;alpha=1e-6,1e-5;trend=true,false;os=ubuntu;max=24"
-      push_to_artifacts_branch:
-        description: "push summary to 'artifacts' branch"
+      grid:    { description: "grid size",              default: "80" }
+      noise:   { description: "observation noise",      default: "0.1" }
+      vx:      { description: "flow velocity x",        default: "1.0" }
+      vy:      { description: "flow velocity y",        default: "0.3" }
+      seed:    { description: "random seed",            default: "7" }
+      commit_artifacts:
+        description: "commit artifacts back to repo"
         default: "false"
-
-permissions:
-  contents: write
-
-concurrency:
-  group: sweep-${{ github.ref }}
-  cancel-in-progress: false
 
 jobs:
   setup-matrix:
     runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.mk.outputs.matrix }}
     steps:
-      - name: Build dynamic matrix from single CSV input
-        id: mk
-        uses: actions/github-script@v7
-        env:
-          SPEC: ${{ inputs.matrix }}
+      - uses: actions/checkout@v4
+      - name: Cache pip
+        uses: actions/cache@v3
         with:
-          script: |
-            const raw = String(process.env.SPEC || "");
-            const parts = Object.fromEntries(
-              raw.split(";").map(s=>{
-                const [k,v] = s.split("=").map(x=>x.trim());
-                return [ (k||"").toLowerCase(), (v||"") ];
-              }).filter(([k])=>k)
-            );
-            const csv = s => (s||"").split(",").map(x=>x.trim()).filter(Boolean);
-            const normOS = x => (String(x).toLowerCase().startsWith("win") ? "windows-latest" : "ubuntu-latest");
-            const lp = csv(parts.lp || "20,30,40");
-            const lc = csv(parts.lc || "6,8,12");
-            const al = csv(parts.alpha || "1e-6,1e-5");
-            const tr = csv(parts.trend || "true,false");
-            const os = csv(parts.os || "ubuntu").map(normOS);
-            const cap = Math.max(1, parseInt(parts.max || "24", 10));
-            const combos = [];
-            for (const o of os)
-              for (const t of tr)
-                for (const a of al)
-                  for (const lcc of lc)
-                    for (const lpp of lp)
-                      combos.push({ os:o, use_trend:["true","1","yes"].includes(String(t).toLowerCase()), alpha:a, lp:lpp, lc:lcc });
-            core.setOutput("matrix", JSON.stringify(combos.slice(0, cap)));
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
   sweep-baseline:
     needs: setup-matrix
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 6
-      matrix: ${{ fromJson(needs.setup-matrix.outputs.matrix) }}
-    env:
-      MPLBACKEND: Agg
+      matrix:
+        lp: [20, 30, 40]
+        lc: [6, 8, 12]
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.10", cache: "pip" }
-      - name: Install deps
+      - name: Run sweep baseline
         run: |
-          set -euxo pipefail
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install "shapely>=2,<2.1" || true
-      - name: Generate data (retry)
-        run: |
-          set -euxo pipefail
-          retry() { local cmd="$*"; for i in 1 2 3; do echo "::group::Attempt $i: $cmd"; if eval "$cmd"; then echo "::endgroup::"; return 0; fi; echo "::warning::retrying..."; sleep 3; echo "::endgroup::"; done; return 1; }
-          retry python scripts/generate_synth.py \
-            --n_obs "${{ inputs.n_obs }}" --grid "${{ inputs.grid }}" --noise "${{ inputs.noise }}" \
-            --vx "${{ inputs.vx }}" --vy "${{ inputs.vy }}" --seed "${{ inputs.seed }}"
-      - name: Run baseline
-        run: |
-          set -euxo pipefail
-          retry() { local cmd="$*"; for i in 1 2 3; do echo "::group::Attempt $i: $cmd"; if eval "$cmd"; then echo "::endgroup::"; return 0; fi; echo "::warning::retrying..."; sleep 3; echo "::endgroup::"; done; return 1; }
-          TREND_FLAG=""
-          if ${{ matrix.use_trend }}; then TREND_FLAG="--use_trend"; fi
-          retry python scripts/run_baseline.py --fast_loo ${TREND_FLAG} \
-            --length_parallel ${{ matrix.lp }} --length_cross ${{ matrix.lc }} \
-            --alpha ${{ matrix.alpha }} --no_opt
-          mkdir -p sweep/baseline
-          P_TR=$([ "${{ matrix.use_trend }}" = "true" ] && echo "tr1" || echo "tr0")
-          P_OS="${{ matrix.os }}"
-          cp figures/metrics.json "sweep/baseline/metrics_lp${{ matrix.lp }}_lc${{ matrix.lc }}_a${{ matrix.alpha }}_${P_TR}_os-${P_OS}.json"
-          cp figures/mean_map.png "sweep/baseline/mean_lp${{ matrix.lp }}_lc${{ matrix.lc }}_a${{ matrix.alpha }}_${P_TR}_os-${P_OS}.png"
-          cp figures/std_map.png  "sweep/baseline/std_lp${{ matrix.lp }}_lc${{ matrix.lc }}_a${{ matrix.alpha }}_${P_TR}_os-${P_OS}.png"
-      - uses: actions/upload-artifact@v4
+          for i in 1 2 3; do
+            echo "::group::Attempt $i"
+            if python scripts/run_baseline.py \
+              --length_parallel ${{ matrix.lp }} \
+              --length_cross ${{ matrix.lc }} \
+              --alpha 1e-6 --no_opt; then
+              echo "::endgroup::"
+              break
+            else
+              echo "::warning:: Attempt $i failed, retrying..."
+              echo "::endgroup::"
+              sleep 5
+            fi
+          done
+      - uses: actions/upload-artifact@v3
         with:
-          name: baseline-lp${{ matrix.lp }}-lc${{ matrix.lc }}-a${{ matrix.alpha }}-tr${{ matrix.use_trend }}-os-${{ matrix.os }}
-          path: sweep/baseline/*
+          name: baseline-${{ matrix.lp }}-${{ matrix.lc }}
+          path: figures/
 
   physics-soft:
-    needs: sweep-baseline
+    needs: setup-matrix
     runs-on: ubuntu-latest
-    env: { MPLBACKEND: Agg }
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.10", cache: "pip" }
-      - name: Install deps
+      - name: Run physics soft constraint
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install "shapely>=2,<2.1" || true
-      - name: Generate data
-        run: |
-          python scripts/generate_synth.py \
-            --n_obs "${{ inputs.n_obs }}" --grid "${{ inputs.grid }}" --noise "${{ inputs.noise }}" \
-            --vx "${{ inputs.vx }}" --vy "${{ inputs.vy }}" --seed "${{ inputs.seed }}"
-      - name: Run physics-soft
-        run: |
-          python scripts/run_physics_soft.py --use_trend
-          mkdir -p sweep/phys
-          cp -f figures/metrics_physics_soft.json sweep/phys/ || true
-          cp -f figures/*.png sweep/phys/ || true
-          cp -f figures/next_points.csv sweep/phys/ || true
-          cp -f data/grid_pred.csv sweep/phys/ || true
-          [ -f data/malaysia_barrier.geojson ] && cp -f data/malaysia_barrier.geojson sweep/phys/ || true
-      - uses: actions/upload-artifact@v4
+          python scripts/run_physics_soft.py \
+            --length_parallel_list 20 30 40 \
+            --length_cross_list 6 8 12 \
+            --lambda_phys 1.0 --kappa 1.0
+      - uses: actions/upload-artifact@v3
         with:
           name: physics-soft
-          path: sweep/phys/
+          path: figures/
 
   aggregate:
     needs: [sweep-baseline, physics-soft]
     runs-on: ubuntu-latest
-    env: { MPLBACKEND: Agg }
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.10", cache: "pip" }
-      - name: Install minimal deps
+      - uses: actions/download-artifact@v3
+      - name: Merge metrics + generate heatmap
         run: |
-          python -m pip install --upgrade pip
-          pip install numpy pandas matplotlib
-      - uses: actions/download-artifact@v4
+          python scripts/make_fourpanel.py
+      - uses: actions/upload-artifact@v3
         with:
-          pattern: baseline-*
-          path: _dl/baseline
-          merge-multiple: true
-      - uses: actions/download-artifact@v4
-        with:
-          name: physics-soft
-          path: _dl/phys
-      - name: Merge metrics + heatmaps
-        shell: python
+          name: all-results
+          path: figures/
+
+      - name: Commit artifacts back
+        if: ${{ github.event.inputs.commit_artifacts == 'true' }}
         run: |
-          import json, re, os, glob
-          import numpy as np, pandas as pd, matplotlib.pyplot as plt
-          os.makedirs("summary", exist_ok=True)
-          rows=[]
-          for p in glob.glob("_dl/baseline/metrics_lp*_lc*_a*_*.json"):
-              bn=os.path.basename(p)
-              m=re.search(r"metrics_lp(\d+)_lc(\d+)_a([^_]+)_(tr[01])_os-(.+)\.json$", bn)
-              if not m: 
-                  continue
-              lp,lc,a,tr,osname=m.groups()
-              with open(p,"r",encoding="utf-8") as f: js=json.load(f)
-              rows.append({"lp":int(lp),"lc":int(lc),"alpha":a,"trend":1 if tr=='tr1' else 0,"os":osname,
-                           "MAE":js.get("MAE"),"RMSE":js.get("RMSE"),"CRPS":js.get("CRPS")})
-          df=pd.DataFrame(rows)
-          if df.empty: raise SystemExit("no baseline metrics found")
-          df.to_csv("summary/baseline_metrics_full.csv", index=False)
-
-          sel=df.sort_values(["alpha","trend","os"]).iloc[0]
-          dfh=df[(df["alpha"]==sel["alpha"])&(df["trend"]==sel["trend"])&(df["os"]==sel["os"])]
-          def heat(dfv,val,fname):
-              piv=dfv.pivot(index="lc",columns="lp",values=val)
-              fig=plt.figure(); im=plt.imshow(piv.values,origin="lower",aspect="auto")
-              plt.xticks(range(len(piv.columns)),piv.columns); plt.yticks(range(len(piv.index)),piv.index)
-              plt.xlabel("length_parallel (lp)"); plt.ylabel("length_cross (lc)")
-              plt.title(f"{val} heatmap (alpha={sel['alpha']}, trend={int(sel['trend'])}, os={sel['os']})")
-              plt.colorbar(im)
-              for i,lc in enumerate(piv.index):
-                  for j,lp in enumerate(piv.columns):
-                      v=piv.loc[lc,lp]
-                      if pd.notnull(v): plt.text(j,i,f"{v:.3f}",ha="center",va="center",fontsize=8)
-              plt.tight_layout(); plt.savefig(f"summary/{fname}",dpi=160); plt.close(fig)
-          for k in ["RMSE","MAE","CRPS"]:
-              heat(dfh,k,f"baseline_{k.lower()}_heatmap.png")
-
-          for q in ["metrics_physics_soft.json","mean_physics_soft.png","std_map.png","physics_residual.png","variogram.png","next_points.csv","grid_pred.csv","malaysia_barrier.geojson"]:
-              for s in glob.glob(os.path.join("_dl/phys", q)):
-                  os.system(f'cp "{s}" "summary/{os.path.basename(s)}"')
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: sweep-summary
-          path: summary/
-
-      - name: Push summary to 'artifacts' branch (optional)
-        if: ${{ inputs.push_to_artifacts_branch == 'true' }}
-        run: |
-          set -e
-          ts=$(date +'%Y%m%d-%H%M%S')
-          out="artifacts/${ts}"
-          mkdir -p "${out}"
-          cp -r summary/* "${out}/"
-          git fetch origin
-          if git show-ref --verify --quiet refs/heads/artifacts; then
-            git switch artifacts
-            git pull --ff-only origin artifacts || true
-          else
-            git switch --orphan artifacts
-            git reset --hard
-          fi
-          mkdir -p "$(dirname "${out}")"
-          cp -r "${GITHUB_WORKSPACE}/${out}" "${out}" -r
-          git config user.name  "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add "${out}"
-          git commit -m "sweep summary ${ts}"
-          git push origin HEAD:artifacts
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add figures/ data/
+          git commit -m "add artifacts [ci skip]" || echo "No changes"
+          git push
